<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/mine_margin">


    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin"
        android:text="@string/forgiveWaring"
        android:textColor="#000000"
        android:textSize="18sp" />

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newPass"
            android:inputType="textPassword"
            android:paddingTop="@dimen/mine_top"
            android:gravity="start|bottom"/>

        <EditText
            android:id="@+id/enNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enNewPass"
            android:inputType="textPassword" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin"/>

    <Button
        android:id="@+id/forgetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/logbutton"
        android:onClick="forgetPassNext"/>

        <TextView
            android:id="@+id/textVi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin"/>

</LinearLayout>
