<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="bjfu.it.duanyingli.dreader.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="bjfu.it.duanyingli.dreader.ui.cart.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="bjfu.it.duanyingli.dreader.ui.mine.MineFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_mine">
        <action
            android:id="@+id/action_navigation_mine_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <activity
        android:id="@+id/loginActivity"
        android:name="bjfu.it.duanyingli.dreader.ui.temp.LoginActivity"
        android:label="LoginActivity"
        tools:layout="@layout/activity_login" />
</navigation>