<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/mine_margin"
    android:layout_marginRight="@dimen/mine_margin"
    android:layout_marginBottom="@dimen/mine_margin"
    android:layout_marginTop="@dimen/mine_top"
    tools:context=".ui.login.LoginCodeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/passlog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="passClick"
                android:text="@string/passButton" />

            <Button
                android:id="@+id/verlog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"

                android:text="@string/verButton" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCodeEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/verButton"
                android:inputType="textPersonName"
                android:textSize="14sp"
                tools:ignore="NestedWeights"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/getCodeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/ver_button"
                android:textColor="#6CAC23"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@drawable/logbutton"
            android:paddingTop="15dp"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/forgetpass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/forgetPass" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>